// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter epics should call get decrementAsyncEpic 1`] = `
ActionsObservable {
  "_isScalar": false,
  "operator": MapOperator {
    "project": [Function],
    "thisArg": undefined,
  },
  "source": ActionsObservable {
    "_isScalar": false,
    "operator": DelayOperator {
      "delay": 1000,
      "scheduler": AsyncScheduler {
        "SchedulerAction": [Function],
        "actions": Array [],
        "active": false,
        "now": [Function],
        "scheduled": undefined,
      },
    },
    "source": ActionsObservable {
      "_isScalar": false,
      "operator": FilterOperator {
        "predicate": [Function],
        "thisArg": undefined,
      },
      "source": ActionsObservable {
        "_isScalar": false,
        "source": Object {
          "decrement": [Function],
          "decrementAsync": [Function],
          "decrementIfEven": [Function],
          "increment": [Function],
          "incrementAsync": [Function],
          "incrementAsync2": [Function],
          "incrementIfOdd": [Function],
        },
      },
    },
  },
}
`;

exports[`Counter epics should call get decrementIfEvenEpic 1`] = `
ActionsObservable {
  "_isScalar": false,
  "operator": MapOperator {
    "project": [Function],
    "thisArg": undefined,
  },
  "source": ActionsObservable {
    "_isScalar": false,
    "operator": FilterOperator {
      "predicate": [Function],
      "thisArg": undefined,
    },
    "source": ActionsObservable {
      "_isScalar": false,
      "operator": FilterOperator {
        "predicate": [Function],
        "thisArg": undefined,
      },
      "source": ActionsObservable {
        "_isScalar": false,
        "source": Object {
          "decrement": [Function],
          "decrementAsync": [Function],
          "decrementIfEven": [Function],
          "increment": [Function],
          "incrementAsync": [Function],
          "incrementAsync2": [Function],
          "incrementIfOdd": [Function],
        },
      },
    },
  },
}
`;
